[package]
name = "near-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
bs58 = "0.5.0"
ed25519-dalek = { version = "2.1.0", features = ["rand_core","digest"] }
hex = "0.4.3"
rand = "0.8.5"
reqwest = "0.11.22"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
